fix: #12 put back -Xlint:all compiler flag